// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiler afterNode afterNode 1 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": 1,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 2,
      "path": null,
      "prevRef": null,
      "propIdx": 1,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [],
  "insertionPoints": Array [
    Array [
      Object {
        "instKey": 2,
        "propIdx": 1,
        "staticElemsBefore": 0,
      },
    ],
  ],
  "producer": [Function],
  "size": 1,
  "templateNode": <div>
    <div />
  </div>,
  "type": 8,
  "unmountPoints": Array [
    Object {
      "instKey": 2,
      "propIdx": 1,
      "staticElemsBefore": 0,
    },
  ],
  "ways": Array [
    Object {
      "getRef": [Function],
      "prevKey": 0,
      "refKey": 1,
    },
  ],
}
`;

exports[`compiler afterNode afterNode 2 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": Array [
        3,
        1,
      ],
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 2,
      "path": null,
      "prevRef": null,
      "propIdx": 1,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": 1,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 3,
      "path": null,
      "prevRef": null,
      "propIdx": 2,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [],
  "insertionPoints": Array [
    Array [
      Object {
        "instKey": 2,
        "propIdx": 1,
        "staticElemsBefore": 0,
      },
      Object {
        "instKey": 3,
        "propIdx": 2,
        "staticElemsBefore": 0,
      },
    ],
  ],
  "producer": [Function],
  "size": 1,
  "templateNode": <div>
    <div />
  </div>,
  "type": 8,
  "unmountPoints": Array [
    Object {
      "instKey": 2,
      "propIdx": 1,
      "staticElemsBefore": 0,
    },
    Object {
      "instKey": 3,
      "propIdx": 2,
      "staticElemsBefore": 0,
    },
  ],
  "ways": Array [
    Object {
      "getRef": [Function],
      "prevKey": 0,
      "refKey": 1,
    },
  ],
}
`;

exports[`compiler basic basic 1 1`] = `
Object {
  "argsWays": Array [],
  "events": Array [],
  "insertionPoints": Array [],
  "producer": [Function],
  "size": 1,
  "templateNode": <div />,
  "type": 8,
  "unmountPoints": Array [],
  "ways": Array [],
}
`;

exports[`compiler basic basic 2 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": null,
      "afterNodeFn": null,
      "applyData": [Function],
      "flag": 0,
      "instKey": 4,
      "path": null,
      "prevRef": null,
      "propIdx": 1,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 0,
      "instKey": 5,
      "path": null,
      "prevRef": null,
      "propIdx": 2,
      "refKey": 1,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 0,
      "instKey": 6,
      "path": null,
      "prevRef": null,
      "propIdx": 4,
      "refKey": 3,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [
    Object {
      "afterKey": null,
      "afterNodeFn": null,
      "applyData": null,
      "flag": 0,
      "instKey": null,
      "path": Array [
        0,
        1,
      ],
      "prevRef": 1,
      "propIdx": 3,
      "refKey": 7,
      "type": "click",
      "updateData": null,
    },
    Object {
      "afterKey": null,
      "afterNodeFn": null,
      "applyData": null,
      "flag": 0,
      "instKey": null,
      "path": Array [
        0,
        0,
        1,
      ],
      "prevRef": 1,
      "propIdx": 5,
      "refKey": 8,
      "type": "click",
      "updateData": null,
    },
  ],
  "insertionPoints": Array [
    undefined,
    Array [
      Object {
        "instKey": 5,
        "propIdx": 2,
        "staticElemsBefore": 0,
      },
    ],
    undefined,
    Array [
      Object {
        "instKey": 6,
        "propIdx": 4,
        "staticElemsBefore": 0,
      },
    ],
  ],
  "producer": [Function],
  "size": 1,
  "templateNode": <tr>
    <td
      class="col-md-1"
    />
    <td
      class="col-md-4"
    >
      <a />
    </td>
    <td
      class="col-md-1"
    >
      <a>
        <span
          aria-hidden="true"
          class="glyphicon glyphicon-remove"
        />
      </a>
    </td>
    <td
      class="col-md-6"
    />
  </tr>,
  "type": 8,
  "unmountPoints": Array [
    Object {
      "instKey": 5,
      "propIdx": 2,
      "staticElemsBefore": 0,
    },
    Object {
      "instKey": 6,
      "propIdx": 4,
      "staticElemsBefore": 0,
    },
  ],
  "ways": Array [
    Object {
      "getRef": [Function],
      "prevKey": 0,
      "refKey": 1,
    },
    Object {
      "getRef": [Function],
      "prevKey": 1,
      "refKey": 2,
    },
    Object {
      "getRef": [Function],
      "prevKey": 2,
      "refKey": 3,
    },
  ],
}
`;

exports[`compiler basic basic 3 1`] = `
Object {
  "argsWays": Array [],
  "events": Array [],
  "insertionPoints": Array [],
  "producer": [Function],
  "size": 1,
  "templateNode": <div>
    <span>
      Space should be preserved when on single line 
    </span>
    <div />
  </div>,
  "type": 8,
  "unmountPoints": Array [],
  "ways": Array [],
}
`;

exports[`compiler basic basic 4 1`] = `
Object {
  "argsWays": Array [],
  "events": Array [],
  "insertionPoints": Array [],
  "producer": [Function],
  "size": 1,
  "templateNode": <div>
    <span>
      Spacing should be removed when on separate line
    </span>
    <div />
  </div>,
  "type": 8,
  "unmountPoints": Array [],
  "ways": Array [],
}
`;

exports[`compiler basic basic 5 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": null,
      "afterNodeFn": null,
      "applyData": [Function],
      "flag": 0,
      "instKey": 1,
      "path": null,
      "prevRef": null,
      "propIdx": 1,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [],
  "insertionPoints": Array [],
  "producer": [Function],
  "size": 1,
  "templateNode": <button
    disabled=""
    id="test1"
  >
     class=value2 disabled
  </button>,
  "type": 8,
  "unmountPoints": Array [],
  "ways": Array [],
}
`;

exports[`compiler basic basic 6 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": null,
      "afterNodeFn": null,
      "applyData": [Function],
      "flag": 0,
      "instKey": 1,
      "path": null,
      "prevRef": null,
      "propIdx": 1,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [],
  "insertionPoints": Array [],
  "producer": [Function],
  "size": 1,
  "templateNode": <button
    disabled=""
    id="test1"
  >
     class=value2 disabled
  </button>,
  "type": 8,
  "unmountPoints": Array [],
  "ways": Array [],
}
`;

exports[`compiler basic basic 7 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": null,
      "afterNodeFn": null,
      "applyData": [Function],
      "flag": 0,
      "instKey": 1,
      "path": null,
      "prevRef": null,
      "propIdx": 1,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [],
  "insertionPoints": Array [],
  "producer": [Function],
  "size": 1,
  "templateNode": <input
    disabled=""
    id="test1"
  />,
  "type": 8,
  "unmountPoints": Array [],
  "ways": Array [],
}
`;

exports[`compiler fragments fragments 1 1`] = `
Object {
  "argsWays": Array [],
  "events": Array [],
  "insertionPoints": Array [],
  "producer": [Function],
  "size": 2,
  "templateNode": <DocumentFragment>
    <div />
    <div />
  </DocumentFragment>,
  "type": 24,
  "unmountPoints": Array [],
  "ways": Array [],
}
`;

exports[`compiler fragments fragments 2 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 0,
      "instKey": 2,
      "path": null,
      "prevRef": null,
      "propIdx": 1,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 0,
      "instKey": 3,
      "path": null,
      "prevRef": null,
      "propIdx": 2,
      "refKey": 1,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [],
  "insertionPoints": Array [
    Array [
      Object {
        "instKey": 2,
        "propIdx": 1,
        "staticElemsBefore": 0,
      },
    ],
    Array [
      Object {
        "instKey": 3,
        "propIdx": 2,
        "staticElemsBefore": 0,
      },
    ],
  ],
  "producer": [Function],
  "size": 2,
  "templateNode": <DocumentFragment>
    <div />
    <div />
  </DocumentFragment>,
  "type": 24,
  "unmountPoints": Array [
    Object {
      "instKey": 2,
      "propIdx": 1,
      "staticElemsBefore": 0,
    },
    Object {
      "instKey": 3,
      "propIdx": 2,
      "staticElemsBefore": 0,
    },
  ],
  "ways": Array [
    Object {
      "getRef": [Function],
      "prevKey": 0,
      "refKey": 1,
    },
  ],
}
`;

exports[`compiler mixed content mixed 1 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 1,
      "path": null,
      "prevRef": null,
      "propIdx": 1,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [],
  "insertionPoints": Array [
    Array [
      Object {
        "instKey": 1,
        "propIdx": 1,
        "staticElemsBefore": 1,
      },
    ],
  ],
  "producer": [Function],
  "size": 1,
  "templateNode": <div>
    Hello 
  </div>,
  "type": 8,
  "unmountPoints": Array [
    Object {
      "instKey": 1,
      "propIdx": 1,
      "staticElemsBefore": 1,
    },
  ],
  "ways": Array [],
}
`;

exports[`compiler mixed content mixed 2 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": 2,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 4,
      "path": null,
      "prevRef": null,
      "propIdx": 1,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": 3,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 5,
      "path": null,
      "prevRef": null,
      "propIdx": 2,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 6,
      "path": null,
      "prevRef": null,
      "propIdx": 3,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [],
  "insertionPoints": Array [
    Array [
      Object {
        "instKey": 4,
        "propIdx": 1,
        "staticElemsBefore": 1,
      },
      Object {
        "instKey": 5,
        "propIdx": 2,
        "staticElemsBefore": 1,
      },
      Object {
        "instKey": 6,
        "propIdx": 3,
        "staticElemsBefore": 1,
      },
    ],
  ],
  "producer": [Function],
  "size": 1,
  "templateNode": <div>
    Zero 
    <input />
     Fifth 
  </div>,
  "type": 8,
  "unmountPoints": Array [
    Object {
      "instKey": 4,
      "propIdx": 1,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 5,
      "propIdx": 2,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 6,
      "propIdx": 3,
      "staticElemsBefore": 1,
    },
  ],
  "ways": Array [
    Object {
      "getRef": [Function],
      "prevKey": 0,
      "refKey": 1,
    },
    Object {
      "getRef": [Function],
      "prevKey": 1,
      "refKey": 2,
    },
    Object {
      "getRef": [Function],
      "prevKey": 2,
      "refKey": 3,
    },
  ],
}
`;

exports[`compiler mixed content mixed 3 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": 4,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 15,
      "path": null,
      "prevRef": null,
      "propIdx": 1,
      "refKey": 1,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": 5,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 16,
      "path": null,
      "prevRef": null,
      "propIdx": 2,
      "refKey": 1,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": 6,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 17,
      "path": null,
      "prevRef": null,
      "propIdx": 3,
      "refKey": 3,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": 8,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 18,
      "path": null,
      "prevRef": null,
      "propIdx": 4,
      "refKey": 3,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": 11,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 19,
      "path": null,
      "prevRef": null,
      "propIdx": 5,
      "refKey": 7,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": 12,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 20,
      "path": null,
      "prevRef": null,
      "propIdx": 6,
      "refKey": 7,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 21,
      "path": null,
      "prevRef": null,
      "propIdx": 7,
      "refKey": 7,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": 13,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 22,
      "path": null,
      "prevRef": null,
      "propIdx": 8,
      "refKey": 10,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": 14,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 23,
      "path": null,
      "prevRef": null,
      "propIdx": 9,
      "refKey": 10,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 24,
      "path": null,
      "prevRef": null,
      "propIdx": 10,
      "refKey": 10,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [],
  "insertionPoints": Array [
    undefined,
    Array [
      Object {
        "instKey": 15,
        "propIdx": 1,
        "staticElemsBefore": 1,
      },
      Object {
        "instKey": 16,
        "propIdx": 2,
        "staticElemsBefore": 1,
      },
    ],
    undefined,
    Array [
      Object {
        "instKey": 17,
        "propIdx": 3,
        "staticElemsBefore": 0,
      },
      Object {
        "instKey": 18,
        "propIdx": 4,
        "staticElemsBefore": 1,
      },
    ],
    undefined,
    undefined,
    undefined,
    Array [
      Object {
        "instKey": 19,
        "propIdx": 5,
        "staticElemsBefore": 1,
      },
      Object {
        "instKey": 20,
        "propIdx": 6,
        "staticElemsBefore": 1,
      },
      Object {
        "instKey": 21,
        "propIdx": 7,
        "staticElemsBefore": 1,
      },
    ],
    undefined,
    undefined,
    Array [
      Object {
        "instKey": 22,
        "propIdx": 8,
        "staticElemsBefore": 0,
      },
      Object {
        "instKey": 23,
        "propIdx": 9,
        "staticElemsBefore": 1,
      },
      Object {
        "instKey": 24,
        "propIdx": 10,
        "staticElemsBefore": 1,
      },
    ],
  ],
  "producer": [Function],
  "size": 1,
  "templateNode": <div>
    <div>
      Zero 
       Second 
       Fourth
    </div>
    <div>
       Second 
       Fourth
    </div>
    <div>
      Zero 
       Second 
       Fourth 
    </div>
    <div>
       Second 
       Fourth 
    </div>
  </div>,
  "type": 8,
  "unmountPoints": Array [
    Object {
      "instKey": 15,
      "propIdx": 1,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 16,
      "propIdx": 2,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 17,
      "propIdx": 3,
      "staticElemsBefore": 0,
    },
    Object {
      "instKey": 18,
      "propIdx": 4,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 19,
      "propIdx": 5,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 20,
      "propIdx": 6,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 21,
      "propIdx": 7,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 22,
      "propIdx": 8,
      "staticElemsBefore": 0,
    },
    Object {
      "instKey": 23,
      "propIdx": 9,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 24,
      "propIdx": 10,
      "staticElemsBefore": 1,
    },
  ],
  "ways": Array [
    Object {
      "getRef": [Function],
      "prevKey": 0,
      "refKey": 1,
    },
    Object {
      "getRef": [Function],
      "prevKey": 1,
      "refKey": 2,
    },
    Object {
      "getRef": [Function],
      "prevKey": 1,
      "refKey": 3,
    },
    Object {
      "getRef": [Function],
      "prevKey": 2,
      "refKey": 4,
    },
    Object {
      "getRef": [Function],
      "prevKey": 4,
      "refKey": 5,
    },
    Object {
      "getRef": [Function],
      "prevKey": 3,
      "refKey": 6,
    },
    Object {
      "getRef": [Function],
      "prevKey": 3,
      "refKey": 7,
    },
    Object {
      "getRef": [Function],
      "prevKey": 6,
      "refKey": 8,
    },
    Object {
      "getRef": [Function],
      "prevKey": 7,
      "refKey": 9,
    },
    Object {
      "getRef": [Function],
      "prevKey": 7,
      "refKey": 10,
    },
    Object {
      "getRef": [Function],
      "prevKey": 9,
      "refKey": 11,
    },
    Object {
      "getRef": [Function],
      "prevKey": 11,
      "refKey": 12,
    },
    Object {
      "getRef": [Function],
      "prevKey": 10,
      "refKey": 13,
    },
    Object {
      "getRef": [Function],
      "prevKey": 13,
      "refKey": 14,
    },
  ],
}
`;

exports[`compiler mixed content mixed 4 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": 5,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 7,
      "path": null,
      "prevRef": null,
      "propIdx": 1,
      "refKey": 3,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": 6,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 8,
      "path": null,
      "prevRef": null,
      "propIdx": 2,
      "refKey": 3,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 9,
      "path": null,
      "prevRef": null,
      "propIdx": 3,
      "refKey": 3,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [],
  "insertionPoints": Array [
    undefined,
    undefined,
    undefined,
    Array [
      Object {
        "instKey": 7,
        "propIdx": 1,
        "staticElemsBefore": 1,
      },
      Object {
        "instKey": 8,
        "propIdx": 2,
        "staticElemsBefore": 1,
      },
      Object {
        "instKey": 9,
        "propIdx": 3,
        "staticElemsBefore": 1,
      },
    ],
  ],
  "producer": [Function],
  "size": 2,
  "templateNode": <DocumentFragment>
    <div />
    <div>
      <div />
      <div>
        Zero 
         Second 
         Fourth 
      </div>
    </div>
  </DocumentFragment>,
  "type": 24,
  "unmountPoints": Array [
    Object {
      "instKey": 7,
      "propIdx": 1,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 8,
      "propIdx": 2,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 9,
      "propIdx": 3,
      "staticElemsBefore": 1,
    },
  ],
  "ways": Array [
    Object {
      "getRef": [Function],
      "prevKey": 0,
      "refKey": 1,
    },
    Object {
      "getRef": [Function],
      "prevKey": 1,
      "refKey": 2,
    },
    Object {
      "getRef": [Function],
      "prevKey": 2,
      "refKey": 3,
    },
    Object {
      "getRef": [Function],
      "prevKey": 3,
      "refKey": 4,
    },
    Object {
      "getRef": [Function],
      "prevKey": 4,
      "refKey": 5,
    },
    Object {
      "getRef": [Function],
      "prevKey": 5,
      "refKey": 6,
    },
  ],
}
`;

exports[`compiler mixed content mixed 5 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": 2,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 4,
      "path": null,
      "prevRef": null,
      "propIdx": 1,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 5,
      "path": null,
      "prevRef": null,
      "propIdx": 2,
      "refKey": 2,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": 3,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 6,
      "path": null,
      "prevRef": null,
      "propIdx": 3,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 7,
      "path": null,
      "prevRef": null,
      "propIdx": 4,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [],
  "insertionPoints": Array [
    Array [
      Object {
        "instKey": 4,
        "propIdx": 1,
        "staticElemsBefore": 1,
      },
      Object {
        "instKey": 6,
        "propIdx": 3,
        "staticElemsBefore": 1,
      },
      Object {
        "instKey": 7,
        "propIdx": 4,
        "staticElemsBefore": 1,
      },
    ],
    undefined,
    Array [
      Object {
        "instKey": 5,
        "propIdx": 2,
        "staticElemsBefore": 1,
      },
    ],
  ],
  "producer": [Function],
  "size": 1,
  "templateNode": <div>
    Zero 
    <div>
      Second 
    </div>
     Fifth 
  </div>,
  "type": 8,
  "unmountPoints": Array [
    Object {
      "instKey": 4,
      "propIdx": 1,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 6,
      "propIdx": 3,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 7,
      "propIdx": 4,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 5,
      "propIdx": 2,
      "staticElemsBefore": 1,
    },
  ],
  "ways": Array [
    Object {
      "getRef": [Function],
      "prevKey": 0,
      "refKey": 1,
    },
    Object {
      "getRef": [Function],
      "prevKey": 1,
      "refKey": 2,
    },
    Object {
      "getRef": [Function],
      "prevKey": 2,
      "refKey": 3,
    },
  ],
}
`;

exports[`compiler mixed content mixed 6 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": 2,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 4,
      "path": null,
      "prevRef": null,
      "propIdx": 1,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": 3,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 5,
      "path": null,
      "prevRef": null,
      "propIdx": 2,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 6,
      "path": null,
      "prevRef": null,
      "propIdx": 3,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [],
  "insertionPoints": Array [
    Array [
      Object {
        "instKey": 4,
        "propIdx": 1,
        "staticElemsBefore": 1,
      },
      Object {
        "instKey": 5,
        "propIdx": 2,
        "staticElemsBefore": 1,
      },
      Object {
        "instKey": 6,
        "propIdx": 3,
        "staticElemsBefore": 1,
      },
    ],
  ],
  "producer": [Function],
  "size": 1,
  "templateNode": <div>
    Zero 
     Second 
     Fourth 
  </div>,
  "type": 8,
  "unmountPoints": Array [
    Object {
      "instKey": 4,
      "propIdx": 1,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 5,
      "propIdx": 2,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 6,
      "propIdx": 3,
      "staticElemsBefore": 1,
    },
  ],
  "ways": Array [
    Object {
      "getRef": [Function],
      "prevKey": 0,
      "refKey": 1,
    },
    Object {
      "getRef": [Function],
      "prevKey": 1,
      "refKey": 2,
    },
    Object {
      "getRef": [Function],
      "prevKey": 2,
      "refKey": 3,
    },
  ],
}
`;

exports[`compiler mixed content mixed 7 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": 1,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 3,
      "path": null,
      "prevRef": null,
      "propIdx": 1,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": 2,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 4,
      "path": null,
      "prevRef": null,
      "propIdx": 2,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 5,
      "path": null,
      "prevRef": null,
      "propIdx": 3,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [],
  "insertionPoints": Array [
    Array [
      Object {
        "instKey": 3,
        "propIdx": 1,
        "staticElemsBefore": 0,
      },
      Object {
        "instKey": 4,
        "propIdx": 2,
        "staticElemsBefore": 1,
      },
      Object {
        "instKey": 5,
        "propIdx": 3,
        "staticElemsBefore": 1,
      },
    ],
  ],
  "producer": [Function],
  "size": 1,
  "templateNode": <div>
     Second 
     Fourth 
  </div>,
  "type": 8,
  "unmountPoints": Array [
    Object {
      "instKey": 3,
      "propIdx": 1,
      "staticElemsBefore": 0,
    },
    Object {
      "instKey": 4,
      "propIdx": 2,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 5,
      "propIdx": 3,
      "staticElemsBefore": 1,
    },
  ],
  "ways": Array [
    Object {
      "getRef": [Function],
      "prevKey": 0,
      "refKey": 1,
    },
    Object {
      "getRef": [Function],
      "prevKey": 1,
      "refKey": 2,
    },
  ],
}
`;

exports[`compiler mixed content mixed 8 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": 6,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 8,
      "path": null,
      "prevRef": null,
      "propIdx": 1,
      "refKey": 4,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": 7,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 9,
      "path": null,
      "prevRef": null,
      "propIdx": 2,
      "refKey": 4,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 10,
      "path": null,
      "prevRef": null,
      "propIdx": 3,
      "refKey": 4,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [],
  "insertionPoints": Array [
    undefined,
    undefined,
    undefined,
    undefined,
    Array [
      Object {
        "instKey": 8,
        "propIdx": 1,
        "staticElemsBefore": 1,
      },
      Object {
        "instKey": 9,
        "propIdx": 2,
        "staticElemsBefore": 1,
      },
      Object {
        "instKey": 10,
        "propIdx": 3,
        "staticElemsBefore": 1,
      },
    ],
  ],
  "producer": [Function],
  "size": 1,
  "templateNode": <div>
    <div />
    <div>
      <div />
      <div>
        Zero 
         Second 
         Fourth 
      </div>
    </div>
  </div>,
  "type": 8,
  "unmountPoints": Array [
    Object {
      "instKey": 8,
      "propIdx": 1,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 9,
      "propIdx": 2,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 10,
      "propIdx": 3,
      "staticElemsBefore": 1,
    },
  ],
  "ways": Array [
    Object {
      "getRef": [Function],
      "prevKey": 0,
      "refKey": 1,
    },
    Object {
      "getRef": [Function],
      "prevKey": 1,
      "refKey": 2,
    },
    Object {
      "getRef": [Function],
      "prevKey": 2,
      "refKey": 3,
    },
    Object {
      "getRef": [Function],
      "prevKey": 3,
      "refKey": 4,
    },
    Object {
      "getRef": [Function],
      "prevKey": 4,
      "refKey": 5,
    },
    Object {
      "getRef": [Function],
      "prevKey": 5,
      "refKey": 6,
    },
    Object {
      "getRef": [Function],
      "prevKey": 6,
      "refKey": 7,
    },
  ],
}
`;

exports[`compiler mixed content mixed 9 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": null,
      "afterNodeFn": null,
      "applyData": [Function],
      "flag": 0,
      "instKey": 10,
      "path": null,
      "prevRef": null,
      "propIdx": 1,
      "refKey": 1,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": null,
      "applyData": [Function],
      "flag": 0,
      "instKey": 11,
      "path": null,
      "prevRef": null,
      "propIdx": 2,
      "refKey": 7,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": 9,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 12,
      "path": null,
      "prevRef": null,
      "propIdx": 3,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 13,
      "path": null,
      "prevRef": null,
      "propIdx": 4,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [],
  "insertionPoints": Array [
    Array [
      Object {
        "instKey": 12,
        "propIdx": 3,
        "staticElemsBefore": 8,
      },
      Object {
        "instKey": 13,
        "propIdx": 4,
        "staticElemsBefore": 2,
      },
    ],
  ],
  "producer": [Function],
  "size": 1,
  "templateNode": <div>
    <input />
    Zero
    <div>
      First
    </div>
    Second
    <div>
      Third
    </div>
    Fourth
    <input />
    Fifth  
    <input />
     Seventh 
  </div>,
  "type": 8,
  "unmountPoints": Array [
    Object {
      "instKey": 12,
      "propIdx": 3,
      "staticElemsBefore": 8,
    },
    Object {
      "instKey": 13,
      "propIdx": 4,
      "staticElemsBefore": 2,
    },
  ],
  "ways": Array [
    Object {
      "getRef": [Function],
      "prevKey": 0,
      "refKey": 1,
    },
    Object {
      "getRef": [Function],
      "prevKey": 1,
      "refKey": 2,
    },
    Object {
      "getRef": [Function],
      "prevKey": 2,
      "refKey": 3,
    },
    Object {
      "getRef": [Function],
      "prevKey": 3,
      "refKey": 4,
    },
    Object {
      "getRef": [Function],
      "prevKey": 4,
      "refKey": 5,
    },
    Object {
      "getRef": [Function],
      "prevKey": 5,
      "refKey": 6,
    },
    Object {
      "getRef": [Function],
      "prevKey": 6,
      "refKey": 7,
    },
    Object {
      "getRef": [Function],
      "prevKey": 7,
      "refKey": 8,
    },
    Object {
      "getRef": [Function],
      "prevKey": 8,
      "refKey": 9,
    },
  ],
}
`;

exports[`compiler mixed content mixed 10 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": null,
      "afterNodeFn": null,
      "applyData": [Function],
      "flag": 0,
      "instKey": 20,
      "path": null,
      "prevRef": null,
      "propIdx": 1,
      "refKey": 1,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": null,
      "applyData": [Function],
      "flag": 0,
      "instKey": 21,
      "path": null,
      "prevRef": null,
      "propIdx": 2,
      "refKey": 8,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": 10,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 22,
      "path": null,
      "prevRef": null,
      "propIdx": 3,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 23,
      "path": null,
      "prevRef": null,
      "propIdx": 4,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": null,
      "applyData": [Function],
      "flag": 0,
      "instKey": 24,
      "path": null,
      "prevRef": null,
      "propIdx": 5,
      "refKey": 11,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": null,
      "applyData": [Function],
      "flag": 0,
      "instKey": 25,
      "path": null,
      "prevRef": null,
      "propIdx": 6,
      "refKey": 17,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": 19,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 26,
      "path": null,
      "prevRef": null,
      "propIdx": 7,
      "refKey": 2,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 27,
      "path": null,
      "prevRef": null,
      "propIdx": 8,
      "refKey": 2,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [],
  "insertionPoints": Array [
    Array [
      Object {
        "instKey": 22,
        "propIdx": 3,
        "staticElemsBefore": 8,
      },
      Object {
        "instKey": 23,
        "propIdx": 4,
        "staticElemsBefore": 2,
      },
    ],
    undefined,
    Array [
      Object {
        "instKey": 26,
        "propIdx": 7,
        "staticElemsBefore": 8,
      },
      Object {
        "instKey": 27,
        "propIdx": 8,
        "staticElemsBefore": 2,
      },
    ],
  ],
  "producer": [Function],
  "size": 2,
  "templateNode": <DocumentFragment>
    <div>
      <input />
      Zero
      <div>
        First
      </div>
      Second
      <div>
        Third
      </div>
      Fourth
      <input />
      Fifth  
      <input />
       Seventh 
    </div>
    <div>
      <input />
      Zero
      <div>
        First
      </div>
      Second
      <div>
        Third
      </div>
      Fourth
      <input />
      Fifth  
      <input />
       Seventh 
    </div>
  </DocumentFragment>,
  "type": 24,
  "unmountPoints": Array [
    Object {
      "instKey": 22,
      "propIdx": 3,
      "staticElemsBefore": 8,
    },
    Object {
      "instKey": 23,
      "propIdx": 4,
      "staticElemsBefore": 2,
    },
    Object {
      "instKey": 26,
      "propIdx": 7,
      "staticElemsBefore": 8,
    },
    Object {
      "instKey": 27,
      "propIdx": 8,
      "staticElemsBefore": 2,
    },
  ],
  "ways": Array [
    Object {
      "getRef": [Function],
      "prevKey": 0,
      "refKey": 1,
    },
    Object {
      "getRef": [Function],
      "prevKey": 0,
      "refKey": 2,
    },
    Object {
      "getRef": [Function],
      "prevKey": 1,
      "refKey": 3,
    },
    Object {
      "getRef": [Function],
      "prevKey": 3,
      "refKey": 4,
    },
    Object {
      "getRef": [Function],
      "prevKey": 4,
      "refKey": 5,
    },
    Object {
      "getRef": [Function],
      "prevKey": 5,
      "refKey": 6,
    },
    Object {
      "getRef": [Function],
      "prevKey": 6,
      "refKey": 7,
    },
    Object {
      "getRef": [Function],
      "prevKey": 7,
      "refKey": 8,
    },
    Object {
      "getRef": [Function],
      "prevKey": 8,
      "refKey": 9,
    },
    Object {
      "getRef": [Function],
      "prevKey": 9,
      "refKey": 10,
    },
    Object {
      "getRef": [Function],
      "prevKey": 2,
      "refKey": 11,
    },
    Object {
      "getRef": [Function],
      "prevKey": 11,
      "refKey": 12,
    },
    Object {
      "getRef": [Function],
      "prevKey": 12,
      "refKey": 13,
    },
    Object {
      "getRef": [Function],
      "prevKey": 13,
      "refKey": 14,
    },
    Object {
      "getRef": [Function],
      "prevKey": 14,
      "refKey": 15,
    },
    Object {
      "getRef": [Function],
      "prevKey": 15,
      "refKey": 16,
    },
    Object {
      "getRef": [Function],
      "prevKey": 16,
      "refKey": 17,
    },
    Object {
      "getRef": [Function],
      "prevKey": 17,
      "refKey": 18,
    },
    Object {
      "getRef": [Function],
      "prevKey": 18,
      "refKey": 19,
    },
  ],
}
`;

exports[`compiler mixed content mixed 11 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": Array [
        5,
        3,
      ],
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 4,
      "path": null,
      "prevRef": null,
      "propIdx": 1,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": 3,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 5,
      "path": null,
      "prevRef": null,
      "propIdx": 2,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 6,
      "path": null,
      "prevRef": null,
      "propIdx": 3,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [],
  "insertionPoints": Array [
    Array [
      Object {
        "instKey": 4,
        "propIdx": 1,
        "staticElemsBefore": 2,
      },
      Object {
        "instKey": 5,
        "propIdx": 2,
        "staticElemsBefore": 0,
      },
      Object {
        "instKey": 6,
        "propIdx": 3,
        "staticElemsBefore": 2,
      },
    ],
  ],
  "producer": [Function],
  "size": 1,
  "templateNode": <div>
    Zero 
    <input />
    <input />
     Fifth 
  </div>,
  "type": 8,
  "unmountPoints": Array [
    Object {
      "instKey": 4,
      "propIdx": 1,
      "staticElemsBefore": 2,
    },
    Object {
      "instKey": 5,
      "propIdx": 2,
      "staticElemsBefore": 0,
    },
    Object {
      "instKey": 6,
      "propIdx": 3,
      "staticElemsBefore": 2,
    },
  ],
  "ways": Array [
    Object {
      "getRef": [Function],
      "prevKey": 0,
      "refKey": 1,
    },
    Object {
      "getRef": [Function],
      "prevKey": 1,
      "refKey": 2,
    },
    Object {
      "getRef": [Function],
      "prevKey": 2,
      "refKey": 3,
    },
  ],
}
`;

exports[`compiler mixed content mixed 12 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": Array [
        7,
        5,
      ],
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 6,
      "path": null,
      "prevRef": null,
      "propIdx": 1,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": 5,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 7,
      "path": null,
      "prevRef": null,
      "propIdx": 2,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 8,
      "path": null,
      "prevRef": null,
      "propIdx": 3,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [],
  "insertionPoints": Array [
    Array [
      Object {
        "instKey": 6,
        "propIdx": 1,
        "staticElemsBefore": 4,
      },
      Object {
        "instKey": 7,
        "propIdx": 2,
        "staticElemsBefore": 0,
      },
      Object {
        "instKey": 8,
        "propIdx": 3,
        "staticElemsBefore": 2,
      },
    ],
  ],
  "producer": [Function],
  "size": 1,
  "templateNode": <div>
    Zero 
    <input />
     One 
    <input />
    <input />
     Fifth
  </div>,
  "type": 8,
  "unmountPoints": Array [
    Object {
      "instKey": 6,
      "propIdx": 1,
      "staticElemsBefore": 4,
    },
    Object {
      "instKey": 7,
      "propIdx": 2,
      "staticElemsBefore": 0,
    },
    Object {
      "instKey": 8,
      "propIdx": 3,
      "staticElemsBefore": 2,
    },
  ],
  "ways": Array [
    Object {
      "getRef": [Function],
      "prevKey": 0,
      "refKey": 1,
    },
    Object {
      "getRef": [Function],
      "prevKey": 1,
      "refKey": 2,
    },
    Object {
      "getRef": [Function],
      "prevKey": 2,
      "refKey": 3,
    },
    Object {
      "getRef": [Function],
      "prevKey": 3,
      "refKey": 4,
    },
    Object {
      "getRef": [Function],
      "prevKey": 4,
      "refKey": 5,
    },
  ],
}
`;

exports[`compiler mixed content mixed 13 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 1,
      "path": null,
      "prevRef": null,
      "propIdx": 1,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [],
  "insertionPoints": Array [
    Array [
      Object {
        "instKey": 1,
        "propIdx": 1,
        "staticElemsBefore": 6,
      },
    ],
  ],
  "producer": [Function],
  "size": 1,
  "templateNode": <div>
    Zero 
    <input />
     Something else
    <div>
      Text
    </div>
    <input />
     Fifth 
  </div>,
  "type": 8,
  "unmountPoints": Array [
    Object {
      "instKey": 1,
      "propIdx": 1,
      "staticElemsBefore": 6,
    },
  ],
  "ways": Array [],
}
`;

exports[`compiler mixed content mixed 14 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 2,
      "path": null,
      "prevRef": null,
      "propIdx": 2,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 3,
      "path": null,
      "prevRef": null,
      "propIdx": 4,
      "refKey": 1,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [
    Object {
      "afterKey": null,
      "afterNodeFn": null,
      "applyData": null,
      "flag": 0,
      "instKey": null,
      "path": Array [],
      "prevRef": 0,
      "propIdx": 1,
      "refKey": 4,
      "type": "click",
      "updateData": null,
    },
    Object {
      "afterKey": null,
      "afterNodeFn": null,
      "applyData": null,
      "flag": 0,
      "instKey": null,
      "path": Array [
        0,
      ],
      "prevRef": 0,
      "propIdx": 3,
      "refKey": 5,
      "type": "click",
      "updateData": null,
    },
  ],
  "insertionPoints": Array [
    Array [
      Object {
        "instKey": 2,
        "propIdx": 2,
        "staticElemsBefore": 1,
      },
    ],
    Array [
      Object {
        "instKey": 3,
        "propIdx": 4,
        "staticElemsBefore": 1,
      },
    ],
  ],
  "producer": [Function],
  "size": 2,
  "templateNode": <DocumentFragment>
    <div>
      First row: 
    </div>
    <div>
      Second row: 
    </div>
  </DocumentFragment>,
  "type": 24,
  "unmountPoints": Array [
    Object {
      "instKey": 2,
      "propIdx": 2,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 3,
      "propIdx": 4,
      "staticElemsBefore": 1,
    },
  ],
  "ways": Array [
    Object {
      "getRef": [Function],
      "prevKey": 0,
      "refKey": 1,
    },
  ],
}
`;

exports[`compiler mixed content mixed 15 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": 3,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 6,
      "path": null,
      "prevRef": null,
      "propIdx": 2,
      "refKey": 0,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": 5,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 7,
      "path": null,
      "prevRef": null,
      "propIdx": 4,
      "refKey": 2,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [
    Object {
      "afterKey": null,
      "afterNodeFn": null,
      "applyData": null,
      "flag": 0,
      "instKey": null,
      "path": Array [],
      "prevRef": 0,
      "propIdx": 1,
      "refKey": 8,
      "type": "click",
      "updateData": null,
    },
    Object {
      "afterKey": null,
      "afterNodeFn": null,
      "applyData": null,
      "flag": 0,
      "instKey": null,
      "path": Array [
        0,
      ],
      "prevRef": 0,
      "propIdx": 3,
      "refKey": 9,
      "type": "click",
      "updateData": null,
    },
  ],
  "insertionPoints": Array [
    Array [
      Object {
        "instKey": 6,
        "propIdx": 2,
        "staticElemsBefore": 1,
      },
    ],
    undefined,
    Array [
      Object {
        "instKey": 7,
        "propIdx": 4,
        "staticElemsBefore": 1,
      },
    ],
  ],
  "producer": [Function],
  "size": 2,
  "templateNode": <DocumentFragment>
    <div>
      First row: 
      <!-- -->
       by me
    </div>
    <div>
      Second row: 
       by me
    </div>
  </DocumentFragment>,
  "type": 24,
  "unmountPoints": Array [
    Object {
      "instKey": 6,
      "propIdx": 2,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 7,
      "propIdx": 4,
      "staticElemsBefore": 1,
    },
  ],
  "ways": Array [
    Object {
      "getRef": [Function],
      "prevKey": 0,
      "refKey": 1,
    },
    Object {
      "getRef": [Function],
      "prevKey": 0,
      "refKey": 2,
    },
    Object {
      "getRef": [Function],
      "prevKey": 1,
      "refKey": 3,
    },
    Object {
      "getRef": [Function],
      "prevKey": 2,
      "refKey": 4,
    },
    Object {
      "getRef": [Function],
      "prevKey": 4,
      "refKey": 5,
    },
  ],
}
`;

exports[`compiler mixed content mixed 16 1`] = `
Object {
  "argsWays": Array [
    Object {
      "afterKey": 6,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 8,
      "path": null,
      "prevRef": null,
      "propIdx": 1,
      "refKey": 3,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 9,
      "path": null,
      "prevRef": null,
      "propIdx": 2,
      "refKey": 3,
      "type": null,
      "updateData": [Function],
    },
    Object {
      "afterKey": null,
      "afterNodeFn": [Function],
      "applyData": [Function],
      "flag": 2,
      "instKey": 10,
      "path": null,
      "prevRef": null,
      "propIdx": 3,
      "refKey": 7,
      "type": null,
      "updateData": [Function],
    },
  ],
  "events": Array [],
  "insertionPoints": Array [
    undefined,
    undefined,
    undefined,
    Array [
      Object {
        "instKey": 8,
        "propIdx": 1,
        "staticElemsBefore": 1,
      },
      Object {
        "instKey": 9,
        "propIdx": 2,
        "staticElemsBefore": 1,
      },
    ],
    undefined,
    undefined,
    undefined,
    Array [
      Object {
        "instKey": 10,
        "propIdx": 3,
        "staticElemsBefore": 1,
      },
    ],
  ],
  "producer": [Function],
  "size": 1,
  "templateNode": <div>
    <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. -->
    <!-- Render a string or number directly -->
    <div>
      The message is: 
      , count is: 
    </div>
    <!-- Some other comment -->
    <div>
      The reversed message is: 
    </div>
  </div>,
  "type": 8,
  "unmountPoints": Array [
    Object {
      "instKey": 8,
      "propIdx": 1,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 9,
      "propIdx": 2,
      "staticElemsBefore": 1,
    },
    Object {
      "instKey": 10,
      "propIdx": 3,
      "staticElemsBefore": 1,
    },
  ],
  "ways": Array [
    Object {
      "getRef": [Function],
      "prevKey": 0,
      "refKey": 1,
    },
    Object {
      "getRef": [Function],
      "prevKey": 1,
      "refKey": 2,
    },
    Object {
      "getRef": [Function],
      "prevKey": 2,
      "refKey": 3,
    },
    Object {
      "getRef": [Function],
      "prevKey": 3,
      "refKey": 4,
    },
    Object {
      "getRef": [Function],
      "prevKey": 3,
      "refKey": 5,
    },
    Object {
      "getRef": [Function],
      "prevKey": 4,
      "refKey": 6,
    },
    Object {
      "getRef": [Function],
      "prevKey": 5,
      "refKey": 7,
    },
  ],
}
`;
